tests/positive/result_equality_check.safe
-- Test: result_equality_check
-- Description: Equality comparison using == operator.
--   Verifies the lexer correctly recognizes == as a single token.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.6.p139f
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.12.p148
-- Expected: ACCEPT

package Result_Equality_Check

   type Status is range 0 to 255;

   function Is_OK (S : Status) returns Boolean

      return S == 0;


   function Is_Error (S : Status) returns Boolean

      return S != 0;



